target/generated-sources/antlr4/GSQLParser.java
// Generated from GSQL.g4 by ANTLR 4.4
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GSQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__16=1, T__15=2, T__14=3, T__13=4, T__12=5, T__11=6, T__10=7, T__9=8, 
		T__8=9, T__7=10, T__6=11, T__5=12, T__4=13, T__3=14, T__2=15, T__1=16, 
		T__0=17, INT=18, CHAR=19, FLOAT=20, CREATE=21, DATABASE=22, DATABASES=23, 
		ALTER=24, RENAME=25, TO=26, DROP=27, USE=28, SHOW=29, TABLE=30, TABLES=31, 
		PRIMARY=32, KEY=33, FOREIGN=34, CHECK=35, REFERENCES=36, NOT=37, OR=38, 
		AND=39, ADD=40, COLUMN=41, COLUMNS=42, CONSTRAINT=43, FROM=44, INSERT=45, 
		INTO=46, VALUES=47, UPDATE=48, SET=49, WHERE=50, DELETE=51, SELECT=52, 
		ORDER=53, BY=54, ASC=55, DESC=56, Id=57, Num=58, SimpDigit=59, Char=60, 
		Comments=61, WhitespaceDeclaration=62;
	public static final String[] tokenNames = {
		"<INVALID>", "')'", "'.'", "','", "'-'", "'*'", "'('", "'<>'", "'<'", 
		"'='", "';'", "'<='", "'2'", "'>'", "'3'", "'1'", "'>='", "'0'", "'int'", 
		"'char'", "'float'", "'CREATE'", "'DATABASE'", "'DATABASES'", "'ALTER'", 
		"'RENAME'", "'TO'", "'DROP'", "'USE'", "'SHOW'", "'TABLE'", "'TABLES'", 
		"'PRIMARY'", "'KEY'", "'FOREIGN'", "'CHECK'", "'REFERENCES'", "'NOT'", 
		"'OR'", "'AND'", "'ADD'", "'COLUMN'", "'COLUMNS'", "'CONSTRAINT'", "'FROM'", 
		"'INSERT'", "'INTO'", "'VALUES'", "'UPDATE'", "'SET'", "'WHERE'", "'DELETE'", 
		"'SELECT'", "'ORDER'", "'BY'", "'ASC'", "'DESC'", "Id", "Num", "SimpDigit", 
		"Char", "Comments", "WhitespaceDeclaration"
	};
	public static final int
		RULE_database = 0, RULE_createDatabase = 1, RULE_alterDatabase = 2, RULE_dropDatabase = 3, 
		RULE_useDatabase = 4, RULE_showDatabase = 5, RULE_tableInstruction = 6, 
		RULE_createTable = 7, RULE_constraint = 8, RULE_type = 9, RULE_date = 10, 
		RULE_expression = 11, RULE_andExpression = 12, RULE_eqExpression = 13, 
		RULE_relExpression = 14, RULE_unExpression = 15, RULE_eqOp = 16, RULE_relOp = 17, 
		RULE_orOp = 18, RULE_andOp = 19, RULE_alterTable = 20, RULE_action = 21, 
		RULE_dropTable = 22, RULE_showTables = 23, RULE_showColumns = 24, RULE_literal = 25, 
		RULE_int_literal = 26, RULE_float_literal = 27, RULE_char_literal = 28, 
		RULE_insertInto = 29, RULE_updateSet = 30, RULE_deleteFrom = 31, RULE_selectFrom = 32;
	public static final String[] ruleNames = {
		"database", "createDatabase", "alterDatabase", "dropDatabase", "useDatabase", 
		"showDatabase", "tableInstruction", "createTable", "constraint", "type", 
		"date", "expression", "andExpression", "eqExpression", "relExpression", 
		"unExpression", "eqOp", "relOp", "orOp", "andOp", "alterTable", "action", 
		"dropTable", "showTables", "showColumns", "literal", "int_literal", "float_literal", 
		"char_literal", "insertInto", "updateSet", "deleteFrom", "selectFrom"
	};

	@Override
	public String getGrammarFileName() { return "GSQL.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GSQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class DatabaseContext extends ParserRuleContext {
		public UseDatabaseContext useDatabase() {
			return getRuleContext(UseDatabaseContext.class,0);
		}
		public DropDatabaseContext dropDatabase() {
			return getRuleContext(DropDatabaseContext.class,0);
		}
		public TableInstructionContext tableInstruction() {
			return getRuleContext(TableInstructionContext.class,0);
		}
		public AlterDatabaseContext alterDatabase() {
			return getRuleContext(AlterDatabaseContext.class,0);
		}
		public CreateDatabaseContext createDatabase() {
			return getRuleContext(CreateDatabaseContext.class,0);
		}
		public ShowDatabaseContext showDatabase() {
			return getRuleContext(ShowDatabaseContext.class,0);
		}
		public DatabaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_database; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GSQLListener ) ((GSQLListener)listener).enterDatabase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GSQLListener ) ((GSQLListener)listener).exitDatabase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GSQLVisitor ) return ((GSQLVisitor<? extends T>)visitor).visitDatabase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DatabaseContext database() throws RecognitionException {
		DatabaseContext _localctx = new DatabaseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_database);
		try {
			setState(72);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(66); createDatabase();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(67); alterDatabase();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(68); dropDatabase();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(69); useDatabase();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(70); showDatabase();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(71); tableInstruction();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateDatabaseContext extends ParserRuleContext {
		public TerminalNode DATABASE() { return getToken(GSQLParser.DATABASE, 0); }
		public TerminalNode CREATE() { return getToken(GSQLParser.CREATE, 0); }
		public TerminalNode Id() { return getToken(GSQLParser.Id, 0); }
		public CreateDatabaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createDatabase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GSQLListener ) ((GSQLListener)listener).enterCreateDatabase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GSQLListener ) ((GSQLListener)listener).exitCreateDatabase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GSQLVisitor ) return ((GSQLVisitor<? extends T>)visitor).visitCreateDatabase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateDatabaseContext createDatabase() throws RecognitionException {
		CreateDatabaseContext _localctx = new CreateDatabaseContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_createDatabase);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74); match(CREATE);
			setState(75); match(DATABASE);
			setState(76); match(Id);
			setState(77); match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlterDatabaseContext extends ParserRuleContext {
		public TerminalNode DATABASE() { return getToken(GSQLParser.DATABASE, 0); }
		public TerminalNode ALTER() { return getToken(GSQLParser.ALTER, 0); }
		public List<TerminalNode> Id() { return getTokens(GSQLParser.Id); }
		public TerminalNode RENAME() { return getToken(GSQLParser.RENAME, 0); }
		public TerminalNode TO() { return getToken(GSQLParser.TO, 0); }
		public TerminalNode Id(int i) {
			return getToken(GSQLParser.Id, i);
		}
		public AlterDatabaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alterDatabase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GSQLListener ) ((GSQLListener)listener).enterAlterDatabase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GSQLListener ) ((GSQLListener)listener).exitAlterDatabase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GSQLVisitor ) return ((GSQLVisitor<? extends T>)visitor).visitAlterDatabase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AlterDatabaseContext alterDatabase() throws RecognitionException {
		AlterDatabaseContext _localctx = new AlterDatabaseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_alterDatabase);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79); match(ALTER);
			setState(80); match(DATABASE);
			setState(81); match(Id);
			setState(82); match(RENAME);
			setState(83); match(TO);
			setState(84); match(Id);
			setState(85); match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DropDatabaseContext extends ParserRuleContext {
		public TerminalNode DATABASE() { return getToken(GSQLParser.DATABASE, 0); }
		public TerminalNode Id() { return getToken(GSQLParser.Id, 0); }
		public TerminalNode DROP() { return getToken(GSQLParser.DROP, 0); }
		public DropDatabaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dropDatabase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GSQLListener ) ((GSQLListener)listener).enterDropDatabase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GSQLListener ) ((GSQLListener)listener).exitDropDatabase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GSQLVisitor ) return ((GSQLVisitor<? extends T>)visitor).visitDropDatabase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DropDatabaseContext dropDatabase() throws RecognitionException {
		DropDatabaseContext _localctx = new DropDatabaseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_dropDatabase);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87); match(DROP);
			setState(88); match(DATABASE);
			setState(89); match(Id);
			setState(90); match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UseDatabaseContext extends ParserRuleContext {
		public TerminalNode DATABASE() { return getToken(GSQLParser.DATABASE, 0); }
		public TerminalNode USE() { return getToken(GSQLParser.USE, 0); }
		public TerminalNode Id() { return getToken(GSQLParser.Id, 0); }
		public UseDatabaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_useDatabase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GSQLListener ) ((GSQLListener)listener).enterUseDatabase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GSQLListener ) ((GSQLListener)listener).exitUseDatabase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GSQLVisitor ) return ((GSQLVisitor<? extends T>)visitor).visitUseDatabase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UseDatabaseContext useDatabase() throws RecognitionException {
		UseDatabaseContext _localctx = new UseDatabaseContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_useDatabase);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92); match(USE);
			setState(93); match(DATABASE);
			setState(94); match(Id);
			setState(95); match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ShowDatabaseContext extends ParserRuleContext {
		public TerminalNode DATABASES() { return getToken(GSQLParser.DATABASES, 0); }
		public TerminalNode SHOW() { return getToken(GSQLParser.SHOW, 0); }
		public ShowDatabaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_showDatabase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GSQLListener ) ((GSQLListener)listener).enterShowDatabase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GSQLListener ) ((GSQLListener)listener).exitShowDatabase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GSQLVisitor ) return ((GSQLVisitor<? extends T>)visitor).visitShowDatabase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ShowDatabaseContext showDatabase() throws RecognitionException {
		ShowDatabaseContext _localctx = new ShowDatabaseContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_showDatabase);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97); match(SHOW);
			setState(98); match(DATABASES);
			setState(99); match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TableInstructionContext extends ParserRuleContext {
		public SelectFromContext selectFrom() {
			return getRuleContext(SelectFromContext.class,0);
		}
		public CreateTableContext createTable() {
			return getRuleContext(CreateTableContext.class,0);
		}
		public DropTableContext dropTable() {
			return getRuleContext(DropTableContext.class,0);
		}
		public ShowTablesContext showTables() {
			return getRuleContext(ShowTablesContext.class,0);
		}
		public DeleteFromContext deleteFrom() {
			return getRuleContext(DeleteFromContext.class,0);
		}
		public InsertIntoContext insertInto() {
			return getRuleContext(InsertIntoContext.class,0);
		}
		public ShowColumnsContext showColumns() {
			return getRuleContext(ShowColumnsContext.class,0);
		}
		public UpdateSetContext updateSet() {
			return getRuleContext(UpdateSetContext.class,0);
		}
		public AlterTableContext alterTable() {
			return getRuleContext(AlterTableContext.class,0);
		}
		public TableInstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tableInstruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GSQLListener ) ((GSQLListener)listener).enterTableInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GSQLListener ) ((GSQLListener)listener).exitTableInstruction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GSQLVisitor ) return ((GSQLVisitor<? extends T>)visitor).visitTableInstruction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TableInstructionContext tableInstruction() throws RecognitionException {
		TableInstructionContext _localctx = new TableInstructionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_tableInstruction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(101); createTable();
				}
				break;
			case 2:
				{
				setState(102); alterTable();
				}
				break;
			case 3:
				{
				setState(103); dropTable();
				}
				break;
			case 4:
				{
				setState(104); showTables();
				}
				break;
			case 5:
				{
				setState(105); showColumns();
				}
				break;
			case 6:
				{
				setState(106); insertInto();
				}
				break;
			case 7:
				{
				setState(107); updateSet();
				}
				break;
			case 8:
				{
				setState(108); deleteFrom();
				}
				break;
			case 9:
				{
				setState(109); selectFrom();
				}
				break;
			}
			setState(112); match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateTableContext extends ParserRuleContext {
		public ConstraintContext constraint() {
			return getRuleContext(ConstraintContext.class,0);
		}
		public TerminalNode CREATE() { return getToken(GSQLParser.CREATE, 0); }
		public List<TerminalNode> Id() { return getTokens(GSQLParser.Id); }
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TerminalNode CONSTRAINT() { return getToken(GSQLParser.CONSTRAINT, 0); }
		public TerminalNode TABLE() { return getToken(GSQLParser.TABLE, 0); }
		public TerminalNode Id(int i) {
			return getToken(GSQLParser.Id, i);
		}
		public CreateTableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createTable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GSQLListener ) ((GSQLListener)listener).enterCreateTable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GSQLListener ) ((GSQLListener)listener).exitCreateTable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GSQLVisitor ) return ((GSQLVisitor<? extends T>)visitor).visitCreateTable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateTableContext createTable() throws RecognitionException {
		CreateTableContext _localctx = new CreateTableContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_createTable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114); match(CREATE);
			setState(115); match(TABLE);
			setState(116); match(Id);
			setState(117); match(T__11);
			setState(128);
			_la = _input.LA(1);
			if (_la==Id) {
				{
				setState(118); match(Id);
				setState(119); type();
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__14) {
					{
					{
					setState(120); match(T__14);
					setState(121); match(Id);
					setState(122); type();
					}
					}
					setState(127);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(132);
			_la = _input.LA(1);
			if (_la==CONSTRAINT) {
				{
				setState(130); match(CONSTRAINT);
				setState(131); constraint();
				}
			}

			setState(134); match(T__16);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstraintContext extends ParserRuleContext {
		public Token name;
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> CHECK() { return getTokens(GSQLParser.CHECK); }
		public TerminalNode CHECK(int i) {
			return getToken(GSQLParser.CHECK, i);
		}
		public List<TerminalNode> Id() { return getTokens(GSQLParser.Id); }
		public TerminalNode KEY() { return getToken(GSQLParser.KEY, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public TerminalNode PRIMARY() { return getToken(GSQLParser.PRIMARY, 0); }
		public TerminalNode FOREIGN() { return getToken(GSQLParser.FOREIGN, 0); }
		public TerminalNode Id(int i) {
			return getToken(GSQLParser.Id, i);
		}
		public TerminalNode REFERENCES() { return getToken(GSQLParser.REFERENCES, 0); }
		public ConstraintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constraint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GSQLListener ) ((GSQLListener)listener).enterConstraint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GSQLListener ) ((GSQLListener)listener).exitConstraint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GSQLVisitor ) return ((GSQLVisitor<? extends T>)visitor).visitConstraint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstraintContext constraint() throws RecognitionException {
		ConstraintContext _localctx = new ConstraintContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_constraint);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(137);
				_la = _input.LA(1);
				if (_la==Id) {
					{
					setState(136); ((ConstraintContext)_localctx).name = match(Id);
					}
				}

				setState(139); match(PRIMARY);
				setState(140); match(KEY);
				setState(141); match(T__11);
				setState(142); match(Id);
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__14) {
					{
					{
					setState(143); match(T__14);
					setState(144); match(Id);
					}
					}
					setState(149);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(150); match(T__16);
				}
				break;
			case 2:
				{
				setState(152);
				_la = _input.LA(1);
				if (_la==Id) {
					{
					setState(151); ((ConstraintContext)_localctx).name = match(Id);
					}
				}

				setState(154); match(FOREIGN);
				setState(155); match(KEY);
				setState(156); match(T__11);
				setState(157); match(Id);
				setState(162);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__14) {
					{
					{
					setState(158); match(T__14);
					setState(159); match(Id);
					}
					}
					setState(164);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(165); match(T__16);
				setState(166); match(REFERENCES);
				setState(167); match(Id);
				setState(168); match(T__11);
				setState(169); match(Id);
				setState(174);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__14) {
					{
					{
					setState(170); match(T__14);
					setState(171); match(Id);
					}
					}
					setState(176);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(177); match(T__16);
				}
				break;
			}
			setState(190);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CHECK || _la==Id) {
				{
				{
				setState(181);
				_la = _input.LA(1);
				if (_la==Id) {
					{
					setState(180); ((ConstraintContext)_localctx).name = match(Id);
					}
				}

				setState(183); match(CHECK);
				setState(184); match(T__11);
				setState(185); expression(0);
				setState(186); match(T__16);
				}
				}
				setState(192);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode Num() { return getToken(GSQLParser.Num, 0); }
		public TerminalNode FLOAT() { return getToken(GSQLParser.FLOAT, 0); }
		public TerminalNode INT() { return getToken(GSQLParser.INT, 0); }
		public DateContext date() {
			return getRuleContext(DateContext.class,0);
		}
		public TerminalNode CHAR() { return getToken(GSQLParser.CHAR, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GSQLListener ) ((GSQLListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GSQLListener ) ((GSQLListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GSQLVisitor ) return ((GSQLVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_type);
		try {
			setState(200);
			switch (_input.LA(1)) {
			case INT:
				enterOuterAlt(_localctx, 1);
				{
				setState(193); match(INT);
				}
				break;
			case FLOAT:
				enterOuterAlt(_localctx, 2);
				{
				setState(194); match(FLOAT);
				}
				break;
			case T__5:
			case T__2:
				enterOuterAlt(_localctx, 3);
				{
				setState(195); date();
				}
				break;
			case CHAR:
				enterOuterAlt(_localctx, 4);
				{
				setState(196); match(CHAR);
				setState(197); match(T__11);
				setState(198); match(Num);
				setState(199); match(T__16);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
